# ros_workspace_socoolme

./: .gitignore  frames_2026-06-04_11.21.12.gv  frames_2026-06-04_15.58.56.gv  main.cpp  memory_demo
big_synthetic_bag/: big_synthetic_bag_0.mcap  metadata.yaml
driver/bare-metal/: entry.c
driver/camera_dam_ros/: camera_dma_driver.c  camera_node.cpp  launch.py  planner_node.cpp
driver/dma-driver/: bare_metal_entry.c  hal_dma_excute.c  hal_entry.c
driver/free-rots/: CMakeLists.c  build steps.md  main.c
driver/robot_lidar/: .modules.order.cmd  .robot_lidar_irq.ko.cmd  .robot_lidar_irq.mod.cmd  .robot_lidar_irq.mod.o.cmd  .robot_lidar_irq.o.cmd  Makefile  modules.order  robot_lidar.dts  robot_lidar_dt.c  robot_lidar_irq.c  robot_lidar_irq.ko  robot_lidar_irq.mod  robot_lidar_irq.mod.c
driver/robot_lidar/watchdog/: check_dog.c  twodog_watcher.c
driver/robot_motor/: .modules.order.cmd  .robot_motor_driver.ko.cmd  .robot_motor_driver.mod.cmd  .robot_motor_driver.mod.o.cmd  .robot_motor_driver.o.cmd  Makefile  cpp_smartpinterandallocatememory  cpp_smartpinterandallocatememory.cpp  modules.order  robot_motor_driver.c  robot_motor_driver.ko  robot_motor_driver.mod  robot_motor_driver.mod.c
driver/stm32_dma/: imu_driver.c  imu_processor.c
launch/: turtlesim_mimic_launch.py
launch_ws/src/launch_tutorial/: CMakeLists.txt  package.xml
launch_ws/src/launch_tutorial/launch/: example_main_launch.py  example_substitutions_launch.py  launch_turtlesim_launch.py  turtlesim_world_2_launch.py  turtlesim_world_3_launch.py
launch_ws/src/py_launch_example/: package.xml  setup.py
launch_ws/src/pylaunch_tutorial/: package.xml  setup.cfg  setup.py
launch_ws/src/pylaunch_tutorial/launch/: broadcaster_listener_launch.py  launch_turtlesim_launch.py
my_bag/: metadata.yaml  my_bag_0.mcap
src/: ros-jazzy-urdf-tutorial_1.1.0-3noble.debian.tar.xz  ros-jazzy-urdf-tutorial_1.1.0-3noble.dsc
src/bag_reading_cpp/: CMakeLists.txt  package.xml
src/bag_reading_cpp/src/: simple_bag_reader.cpp
src/bag_recorder_nodes/: CMakeLists.txt  package.xml
src/bag_recorder_nodes/src/: data_generator_executable.cpp  data_generator_node.cpp  simple_bag_recorder.cpp
src/bag_recorder_nodes_py/: package.xml  setup.py
src/bag_recorder_nodes_py/bag_recorder_nodes_py/: data_generator_executable.py  data_generator_node.py  simple_bag_recorder.py
src/cpp_parameter_event_handler/: CMakeLists.txt  package.xml
src/cpp_parameter_event_handler/src/: parameter_event_handler.cpp
src/cpp_parameters/: CMakeLists.txt  package.xml
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_pubsub/launch/: talker_listener_launch.py
src/cpp_pubsub/src/: member_function_with_topic_statistics.cpp  publisher_lambda_function.cpp  subscriber_lambda_function.cpp
src/cpp_srvcli/: CMakeLists.txt  package.xml
src/custom_action_cpp/: CMakeLists.txt  my_robot_launch.py  package.xml
src/custom_action_cpp/launch/: fibonacci_Composable_launch.py  fibonacci_launch.py
src/custom_action_interfaces/: CMakeLists.txt  package.xml
src/learning_tf2_cpp/: CMakeLists.txt  package.xml
src/learning_tf2_py/: package.xml  setup.py
src/learning_tf2_py/launch/: turtle_tf2_fixed_frame_demo_launch.py  turtle_tf2_sensor_message_launch.py
src/learning_tf2_py/learning_tf2_py/: turtle_tf2_listener.py  turtle_tf2_message_broadcaster.py
src/learning_tf2_py/test/: test_turtle_tf2_listener.py
src/more_interfaces/: CMakeLists.txt  package.xml
src/more_interfaces/src/: subscribe_address_book.cpp
src/my_package/: package.xml
src/polygon_base/: CMakeLists.txt  package.xml
src/polygon_plugins/: package.xml
src/py_pubsub/: package.xml  setup.py
src/py_srvcli/: package.xml  setup.py
src/python_parameter_event_handler/: package.xml  setup.py
src/python_parameter_event_handler/python_parameter_event_handler/: parameter_event_handler.py
src/sync_async_node_example_cpp/: CMakeLists.txt  package.xml
src/sync_async_node_example_cpp/config/: SyncAsync.xml
src/sync_async_node_example_cpp/launch/: sync_async_launch.py
src/sync_async_node_example_cpp/src/: sync_async_reader.cpp  sync_async_writer.cpp
src/tutorial_interfaces/: CMakeLists.txt  package.xml
src/urdf_tutorial_cpp/: package.xml
src/urdf_tutorial_cpp/launch/: launch.py
src/urdf_tutorial_cpp/src/: urdf_tutorial.cpp
timed_synthetic_bag/: metadata.yaml  timed_synthetic_bag_0.mcap
